# mgmt_x_bookmarks

api/: Dockerfile  pyproject.toml
api/bookmarks_categorize/: config.py
api/bookmarks_categorize/modules/: dify.py  x.py
api/bookmarks_categorize/routers/: bookmark.py
api/bookmarks_categorize/schemas/: bookmark.py
api/tests/: README.md  __init__.py  run_tests.py
api/tests/modules/: __init__.py  test_crud.py  test_database.py  test_dify.py
api/tests/routers/: __init__.py  test_bookmark.py
web/: .gitignore  .repomixignore  app.json  package-lock.json  package.json  tsconfig.json  types.ts
web/app/(tabs)/: _layout.tsx  index.tsx  settings.tsx
web/components/: BookmarkItem.tsx  BookmarkList.tsx  SearchBar.tsx  Sidebar.tsx
web/constants/: colors.ts
web/mocks/: bookmarks.ts
web/services/: .api.ts.swp  api.ts
web/store/: bookmarkStore.ts
web/types/: app.ts
